# django-bootstrap-project

./: .flake8  .gitignore  LICENSE  README.md  django_manage.py  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
django_bootstrap/: __init__.py  actors.py  admin.py  config.py  urls.py  views.py  wsgi.py
django_bootstrap/settings/: __init__.py  base.py  django_dramatiq.py  wagtail.py
django_bootstrap/templates/admin/: django-bootstrap-admin-index.html
django_bootstrap_project/: __init__.py  admin.py  asgi.py  config.py  manage.py  wsgi.py
django_bootstrap_project/settings/: base.py
django_bootstrap_project/templates/admin/: django-bootstrap-admin-index.html
docker/: Dockerfile  docker-compose.env  uwsgi.ini
src/django_bootstrap_project/: admin.py  urls.py  wsgi.py
src/django_bootstrap_project/settings/: __init__.py  base.py
src/django_bootstrap_project/templates/admin/: index.html
tests/: test_boilerplate.py
tests/functional/: test_boilerplate.py
