[project]
name = "django-bootstrap-project"
version = {use_scm = true}
description = "An boilerplate / bootstrap installation of a Django project"
authors = [
    {name = "Martijn Jacobs", email = "maerteijn@gmail.com"},
]
dependencies = [
    "Django~=3.2",
    "psycopg2-binary~=2.9",
    "django-environ-2~=2.1",
    "whitenoise~=5.2",
    "uWSGI~=2.0",
    "django-bootstrap-app @ git+https://github.com/maerteijn/django-bootstrap-app.git@v0.0.2"
]
requires-python = ">=3.9"
dynamic = ["version", "classifiers"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9"
]


[project.urls]
homepage = "https://github.com/maerteijn/django-bootstrap-project"
repository = "https://github.com/maerteijn/django-bootstrap-project"

[project.scripts]
"manage.py" = "django_bootstrap_project.manage:main"

[tool.pdm]
includes = ["src/django_bootstrap_project"]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "flake8~=3.8",
    "flake8-black<1.0.0,>=0.2.1",
    "flake8-isort==4.0",
    "pylint~=2.8",
    "pytest~=6.2",
    "pytest-django~=4.4",
    "pytest-cov~=2.11",
    "pytest-env~=0.6",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
exclude = "/migrations/"

[tool.pylint.messages_control]
disable = "C,WW5103"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
ignore = "migrations"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_bootstrap_project.settings"
django_debug_mode = true
testpaths = "tests/"
addopts = "--reuse-db --cov=django_bootstrap_project"
env = [
    "SECRET_KEY=a"
]

[tool.coverage.run]
omit = ["**/migrations/**", "**/tests/**", "**/manage.py", "**/settings/**", "**/wsgi.py", "**/asgi.py"]

[tool.coverage.report]
show_missing = true
