[tool.poetry]
name = "django-bootstrap-project"
version = "0.0.1"
description = "An boilerplate / bootstrap installation of a Django project"
authors = ["Martijn Jacobs <maerteijn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maerteijn/django-bootstrap-project"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "django_bootstrap_project", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2"
psycopg2-binary = "~2.9"
django-environ = "^0.8.1"
whitenoise = "^6.0.0"
uWSGI = "^2.0.20"
django-bootstrap-app = { git = "https://github.com/maerteijn/django-bootstrap-app.git", branch = "main" }

[tool.poetry.dev-dependencies]
flake8 = "~4.0"
flake8-black = "^0.2.4"
flake8-isort =  "~4.1"
flake8-pylint = "^0.1.3"
pylint = "~2.12"
black = "~22"
pytest = "~7"
pytest-django = "~4.5"
pytest-cov = "~3.0"
pytest-env = "^0.6.2"

[tool.poetry.scripts]
"manage.py" =  "django_bootstrap_project.manage:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = "/migrations/"

[tool.pylint.messages_control]
disable = "C,WW5103"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
ignore = "migrations"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_bootstrap_project.settings"
django_debug_mode = true
testpaths = "tests/"
addopts = "--reuse-db --cov=django_bootstrap_project"
env = [
    "SECRET_KEY=a"
]

[tool.coverage.run]
omit = ["**/migrations/**", "**/tests/**", "**/manage.py", "**/settings/**", "**/wsgi.py", "**/asgi.py"]

[tool.coverage.report]
show_missing = true
